--- a/drawlot/pom.xml
+++ b/drawlot/pom.xml
@@ -17,6 +17,8 @@
         <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
         <spring-framework.version>4.3.8.RELEASE</spring-framework.version>
         <jersey.version>2.25.1</jersey.version>
+        <jackson.version>2.8.9</jackson.version>
+        <google.api.version>1.23.0</google.api.version>
         <google.httpclient.version>1.22.0</google.httpclient.version>
     </properties>
 
