--- a/drawlot/server/pom.xml
+++ b/drawlot/server/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>spring-websocket</artifactId>
             <version>4.3.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.avoinovan.drawlot</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
